src/objects/PFLSFTMA__Attribution__c.object
<CustomObject>
    <fields>
        <fullName>PFLSFTMA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attribution</relationshipLabel>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign_Name__c</fullName>
        <formula>PFLSFTMA__Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign_Type__c</fullName>
        <formula>TEXT(PFLSFTMA__Campaign__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Attribution</relationshipLabel>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attribution</relationshipLabel>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Pipeline2__c</fullName>
        <formula>IF( 
PFLSFTMA__Influence_Pipeline_Count__c &gt;0,
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence - Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Pipeline_Count__c</fullName>
        <formula>IF(  
OR(PFLSFTMA__Influence_Pipeline__c=0,PFLSFTMA__Influence_Pipeline__c&lt;0),
NULL,
1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence - Pipeline Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Pipeline__c</fullName>
        <label>Influence - Pipeline</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Revenue2__c</fullName>
        <formula>IF( 
PFLSFTMA__Influence_Revenue_Count__c &gt;0,
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence - Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Revenue_Count__c</fullName>
        <formula>IF(  
OR(PFLSFTMA__Influence_Revenue__c=0,PFLSFTMA__Influence_Revenue__c&lt;0),
NULL,
1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence - Revenue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Influence_Revenue__c</fullName>
        <label>Influence - Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__IsWon__c</fullName>
        <formula>PFLSFTMA__Opportunity__r.IsWon</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsWon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Member_Status__c</fullName>
        <label>Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity_Amount__c</fullName>
        <formula>PFLSFTMA__Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity_Close_Date__c</fullName>
        <formula>DATETIMEVALUE( PFLSFTMA__Opportunity__r.CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity_Count__c</fullName>
        <formula>IF( 
NOT(ISBLANK( PFLSFTMA__Opportunity__c )),1,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity_Create_Date__c</fullName>
        <formula>DATEVALUE( PFLSFTMA__Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attribution</relationshipLabel>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Overall_Influence_Pipeline__c</fullName>
        <formula>IF( 
OR( 
ISNULL( PFLSFTMA__Influence_Pipeline_Count__c ),ISBLANK(PFLSFTMA__Influence_Pipeline_Count__c)), 
NULL, 
&quot;Yes&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Influence - Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Overall_Influence_Revenue__c</fullName>
        <formula>IF( 
OR( 
ISNULL( PFLSFTMA__Influence_Revenue_Count__c ),ISBLANK(PFLSFTMA__Influence_Revenue_Count__c)), 
NULL, 
&quot;Yes&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Influence - Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__PFL_Send_Count__c</fullName>
        <formula>IF( 
NOT(ISBLANK(   PFLSFTMA__PFL_Send_Date__c  )), 
1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PFL Send Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__PFL_Send_Date__c</fullName>
        <label>PFL Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Pipeline_Influence__c</fullName>
        <formula>PFLSFTMA__Influence_Pipeline__c *   PFLSFTMA__Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Influence $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Product_ID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Revenue_Influence__c</fullName>
        <formula>PFLSFTMA__Influence_Revenue__c  *   PFLSFTMA__Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Influence $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Role__c</fullName>
        <formula>PFLSFTMA__User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Stage__c</fullName>
        <formula>TEXT(PFLSFTMA__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Transactions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMA_Transactions</label>
        <referenceTo>PFLSFTMA__TMA_Transactions__c</referenceTo>
        <relationshipLabel>Attribution</relationshipLabel>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Title__c</fullName>
        <formula>PFLSFTMA__User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attribution</label>
    <listViews>
        <fullName>PFLSFTMA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>